--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World! This is Lior Shahverdi's first site. You should feel special to see this
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Lior Shahverdi</title>
+</head>
+<body>
+Hello World!
+</body>
+</html>
