--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
 	<title>Lior Shahverdi</title>
+	 <link rel = "stylesheet" type = "text/css" href = "index.css">
 </head>
 <body>
-Hello World!
+	<div id="navbar">
+		<h1 id="name">Lior Shahverdi</h1>
+		<h2 id="caption">
+			I read about science. I write code. I draw. Sometimes I write jokes. I laugh, I cry, I dance in the shower, I laugh a bit more and return to my code.
+		</h2>
+	</div>
 </body>
 </html>
