--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>I write code. I draw. I read about science. sometimes I write jokes.</h2>
-                    <p class="lead">I laugh. I cry. I dance in the shower. I laugh a bit more and return to writing code.</p>
+                    <h2>I write code. I draw. I read about science. Sometimes I write jokes.</h2>
+                    <p class="lead">I laugh. I cry. I dance in the shower. I laugh a bit more and repeat.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Our Services</h2>
+                    <h2>My Toys</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
@@ -98,10 +98,10 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>LS2048</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>I wrote 2048 for the command line. I intend to animate it soon using JS.</p>
+                                <a href="https://github.com/liorshahverdi/twenty48" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -111,10 +111,10 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>LaskeShahverdiShenanigans</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>My friends and I are developing an original game. What will come of it is yet to be determined.</p>
+                                <a href="https://github.com/liorshahverdi/LaskeShahverdiShenanigans" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -124,10 +124,10 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>LSChess</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>I wrote a chess game. The code is rather ugly at the moment though.</p>
+                                <a href="https://github.com/liorshahverdi/LSChess" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -137,10 +137,10 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>rdp</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>I wrote a nifty interpreter/parser for a generic programming language. It also has a simple GUI. Some semantics are still in development.</p>
+                                <a href="https://github.com/liorshahverdi/rdp" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
+            <h1>Look Lior can center things. Good Lior.</h1>
         </div>
     </aside>
 
@@ -165,7 +165,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Our Work</h2>
+                    <h2>Miscellaneous</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -212,9 +212,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+                    <h3>But just in case I haven't persuaded you yet..</h3>
+                    <a href="http://docs.google.com/viewer?url=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F0B9_HKRCxvDOCNHUyMHhjeTQteEE%2Fview%3Fusp%3Dsharing" class="btn btn-lg btn-light">View my Resume</a>
+                     <a href="http://github.com/liorshahverdi" class="btn btn-lg btn-light">View my GitHub</a>
+                    <!--<a href="#" class="btn btn-lg btn-dark">Take A Silly Survey</a>-->
                 </div>
             </div>
         </div>
@@ -246,13 +247,10 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="https://facebook.com/lior.shahverdi"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/liorshahverdi"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
