--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top">Start Bootstrap</a>
+                <a href="#top">Lior Shahverdi</a>
             </li>
             <li>
                 <a href="#top">Home</a>
@@ -213,7 +213,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>But just in case I haven't persuaded you yet..</h3>
-                    <a href="http://docs.google.com/viewer?url=https%3A%2F%2Fdrive.google.com%2Ffile%2Fd%2F0B9_HKRCxvDOCNHUyMHhjeTQteEE%2Fview%3Fusp%3Dsharing" class="btn btn-lg btn-light">View my Resume</a>
+                    <a href="https://docs.google.com/document/d/1OG83W6umFZBg1qq9wyixb0xDSRCto_FK2DARYRVwZiA/pub" class="btn btn-lg btn-light">View my Resume</a>
                      <a href="http://github.com/liorshahverdi" class="btn btn-lg btn-light">View my GitHub</a>
                     <!--<a href="#" class="btn btn-lg btn-dark">Take A Silly Survey</a>-->
                 </div>
