--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Miscellaneous</h2>
+                    <h2>HTML5 Games and Miscellany</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
