--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                                 <h4>
                                     <strong>LSChess</strong>
                                 </h4>
-                                <p>I wrote a chess game. The code is rather ugly at the moment though.</p>
-                                <a href="https://github.com/liorshahverdi/LSChess" class="btn btn-light">Learn More</a>
+                                <p>I wrote a chess game with a user interface and everything!</p>
+                                <a href="https://github.com/liorshahverdi/chess-v2" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -238,7 +238,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Lior Shahverdi</strong>
                     </h4>
-                    <p>96 Croyden Avenue<br>Great Neck, NY 11023</p>
+                    <p><br>Great Neck, NY 11023</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (516) 423-0035</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">liorshahverdi@gmail.com</a>
