--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a href="https://github.com/liorshahverdi/Binary-Search-Prediction">
+                                    <img class="img-portfolio img-responsive" src="img/bin-search-img.png">
                                 </a>
                             </div>
                         </div>
